--- a/src/components/TeacherItem/style.css
+++ b/src/components/TeacherItem/style.css
@@ -40,6 +40,43 @@
     line-height: 2.8rem;
 }
 
+.teacher-item .schedule-list {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+
+.teacher-item .schedule-list .list {
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.teacher-item .schedule-list .list .schedule {
+    background: var(--color-box-footer);
+    border: 1px solid var(--color-line-in-white);
+    border-radius: 0.8rem;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 1rem;
+}
+
+.teacher-item .schedule-list .list .schedule + .schedule{
+    margin-left: 1.5rem;
+    
+}
+
+.teacher-item .schedule-list .list .schedule p {
+    margin: 0.7rem 0;
+}
+
+.teacher-item .schedule-list .list .schedule h2 {
+    font: 700 1.5rem Archivo;
+    margin-bottom: 1rem;
+}
+
+
+
 .teacher-item footer {
     padding: 3.2rem 2rem;
     background: var(--color-box-footer);
@@ -75,6 +112,7 @@
 .teacher-item footer a:hover {
    background: var(--color-secondary-dark);
 }
+
 
 @media(min-width: 700px){
     .teacher-item header, 
