--- a/src/components/TeacherItem/style.css
+++ b/src/components/TeacherItem/style.css
@@ -40,42 +40,6 @@
     line-height: 2.8rem;
 }
 
-.teacher-item .schedule-list {
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-}
-
-.teacher-item .schedule-list .list {
-    display: flex;
-    align-items: center;
-    margin-top: 2rem;
-}
-
-.teacher-item .schedule-list .list .schedule {
-    background: var(--color-box-footer);
-    border: 1px solid var(--color-line-in-white);
-    border-radius: 0.8rem;
-    text-decoration: none;
-    padding: 10px;
-    font-size: 1rem;
-}
-
-.teacher-item .schedule-list .list .schedule + .schedule{
-    margin-left: 1.5rem;
-    
-}
-
-.teacher-item .schedule-list .list .schedule p {
-    margin: 0.7rem 0;
-}
-
-.teacher-item .schedule-list .list .schedule h2 {
-    font: 700 1.5rem Archivo;
-    margin-bottom: 1rem;
-}
-
-
 
 .teacher-item footer {
     padding: 3.2rem 2rem;
@@ -113,6 +77,52 @@
    background: var(--color-secondary-dark);
 }
 
+.teacher-item .schedule-list {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+
+.teacher-item .schedule-list .list {
+    align-items: center;
+    margin-top: 1rem;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+         "schedule schedule"
+         "schedule schedule"
+         "schedule" ;
+    justify-content: space-between;
+}
+
+.teacher-item .schedule-list .list .schedule {
+    background: var(--color-box-footer);
+    border: 1px solid var(--color-line-in-white);
+    border-radius: 0.8rem;
+    padding: 8px;
+    margin: 1rem 1rem; 
+    width: 14rem;
+    height: 11rem;
+}
+
+.teacher-item .schedule-list .list .schedule + .schedule{
+    margin: 0 auto;
+}
+
+.teacher-item .schedule-list .list .schedule p {
+    margin: 0.2rem 0;
+    font-size: 1.2rem;
+}
+
+.teacher-item .schedule-list .list .schedule h2 {
+    font: 700 1.5rem Archivo;
+    margin-bottom: 1.3rem;
+    font-size: 1.7rem;
+}
+.teacher-item .schedule-list .list .scheduleNull {
+    background: var(--color-input-background);
+}
 
 @media(min-width: 700px){
     .teacher-item header, 
@@ -139,4 +149,26 @@
         margin-right: 1.6rem;
 
     }
+
+    .teacher-item .schedule-list .list {
+        display: flex;
+        margin-top: 2rem;
+    }
+    
+    
+    .teacher-item .schedule-list .list .schedule + .schedule{
+        margin-left: 1.6rem;
+    }
+
+    .teacher-item .schedule-list .list .schedule {
+        margin: 0 auto;
+        width: 12.2rem;
+        height: 13.6rem;
+        padding: 10px;  
+    }
+
+    .teacher-item .schedule-list .list .schedule p {
+        margin: 0.7rem 0;
+    }
+    
 }
