--- a/src/components/PageHeader/style.css
+++ b/src/components/PageHeader/style.css
@@ -4,14 +4,16 @@
     background-color: var(--color-primary);
 }
 .page-header .top-bar-container{
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: var(--color-text-in-primary);
-    padding: 1.6rem 0;
+    padding: 1.6rem 2rem;
+    background-color: var(--color-primary-dark);
 }
+
 .page-header .top-bar-container a {
     height: 3.2rem;
     transition: opacity 0.2s;
@@ -25,6 +27,12 @@
     height: 1.6rem;
 
 }
+
+.page-header .top-bar-container h2 {
+    font: 400 1.5rem Archivo;
+    
+}
+
 .page-header .header-content {
     width: 90%;
     margin: 0 auto;
@@ -74,7 +82,8 @@
         height: 340px;
     }
     .page-header .top-bar-container {
-        max-width: 1100px;
+        max-width: 100%;
+        padding: 1.6rem 14rem;
     }
     .page-header .header-content {
        flex: 1;
