--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -9,6 +9,19 @@
     color: var(--color-text-in-primary);
     background: var(--color-primary);
 }
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header img {
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+}
+
 .logo-container img {
     height: 10rem;
     
