--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -8,76 +8,63 @@
 
     color: var(--color-text-in-primary);
     background: var(--color-primary);
+    
+    padding: 2rem;
 }
 
-header {
+.landing-header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    margin-bottom: 3rem;
+}
+
+.avatar-container {
+    display: flex;
     align-items: center;
 }
 
-header img {
-    width: 8rem;
-    height: 8rem;
+.avatar-container img {
+    width: 6rem;
+    height: 6rem;
     border-radius: 50%;
+    margin-right: 2rem;
+}
+
+.landing-body {
+    display: row;
+    margin-bottom: 4rem;
 }
 
 .logo-container img {
-    height: 10rem;
-    
+    height: 10rem; 
 }
+
 .hero-image{
     width: 100%;
 }
+
 .logo-container{
     text-align: center;
     margin-bottom: 3.2rem;
-    
 }
+
 .logo-container h2 {
     font-weight: 500;
     font-size: 2.4rem;
     line-height: 4.6rem;
-    margin-top: 0.8rem;
+    margin: 0.8rem;
 }
-.buttons-container{
-    display: flex;
-    justify-content: center;
-    margin: 3.2rem 0;    
-}
-.buttons-container a {
-    width: 30rem;
-    height: 10.4rem;
-    border-radius: 0.8rem;
-    font: 700 2.0rem Archivo;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#landing-footer {
+    display: row;
+    /* background-color: var(--color-background); */
+    margin: 0 auto;
+}
 
-    text-decoration: none;
-    color: var(--color-button-text);
-
-    transition: background-color 0.2s;
-}
-.buttons-container a:first-child {
-    margin-right: 1.6rem;
-}
-.buttons-container a img {
-    width: 4rem;
-    margin-right: 1rem;
-}
-.buttons-container a.study {
-    background: var(--color-primary-lighter);
-}
-.buttons-container a.give-classes {
-    background: var(--color-secondary);
-}
-.buttons-container a.study:hover {
-    background: var(--color-primary-light);
-}
-.buttons-container a.give-classes:hover {
-    background: var(--color-secondary-dark);
+.welcome-container {
+    margin-bottom: 2rem;
+    text-align: center;
 }
 
 .total-connections{
@@ -92,50 +79,126 @@ header img {
     margin-left: 0.8rem;
 }
 
+.total-connections {
+    margin-bottom: 2rem;
+}
+
+.buttons-container{
+    display: flex;
+    justify-content: center;
+    margin: 3.2rem 0;    
+}
+
+.buttons-container a {
+    width: 16rem;
+    height: 9rem;
+    border-radius: 0.8rem;
+    font: 700 1.8rem Archivo;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    text-decoration: none;
+    color: var(--color-button-text);
+
+    transition: background-color 0.2s;
+}
+
+.buttons-container a:first-child {
+    margin-right: 1.6rem;
+}
+
+.buttons-container a img {
+    width: 4rem;
+    margin-right: 1rem;
+}
+
+.buttons-container a.study {
+    background: var(--color-primary-lighter);
+}
+
+.buttons-container a.give-classes {
+    background: var(--color-secondary);
+}
+
+.buttons-container a.study:hover {
+    background: var(--color-primary-light);
+}
+
+.buttons-container a.give-classes:hover {
+    background: var(--color-secondary-dark);
+}
+
 @media(min-width: 1100px){
+    #page-landing{
+        height: 100vh;
+        padding:5em;
+    }
 
     #page-landing-content{
         max-width: 1100px;
+        height: 35em;
+    }
 
-        display: grid;
-        grid-template-rows: 350px 1fr;
-        grid-template-columns: 2fr 1fr 1fr;
-        grid-template-areas:
-         "logo hero hero"
-         "buttons buttons total" ;
+    .landing-body {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 
     .logo-container{
-        grid-area: logo;
         align-self: center;
         text-align: left;
-        margin: 0;
+        margin-right: 7rem;
     }
     .logo-container h2{
         text-align: initial;
-        font-size: 3.6rem;
+        font-size: 3.2rem;
     }
     .logo-container img{
         height: 100%;
+        
     }
     .hero-image{
-        grid-area: hero;
         justify-self: end;
+        
     }
-    .buttons-container{
-        grid-area: buttons;
-        justify-content: flex-start;
+    
+    #landing-footer {
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
-    .buttons-container a {
-        font-size: 2.4rem;
+
+    .welcome-container {
+        margin-bottom: 0;
+        text-align: start;
     }
-    .buttons-container a img {
-        margin-right: 2.4rem;
+
+    .welcome-container strong {
+        color: var(--color-text-base);
     }
+
     .total-connections{
-        grid-area: total;
         justify-self: end;
         font-size: 1.3rem;
     }
 
+    .buttons-container{       
+        justify-content: flex-start;
+        
+    }
+
+    .buttons-container a {
+        font-size: 2.4rem;
+        width: 30rem;
+        height: 10.4rem;
+    }
+        
+    .buttons-container a img {
+        margin-right: 2.4rem;
+    }
+    
 }
