--- a/src/pages/MyProfile/style.css
+++ b/src/pages/MyProfile/style.css
@@ -1,13 +1,13 @@
-#page-teacher-form{
+#page-my-profile{
     width: 100vw;
     height: 100vh;
 }
 
-#page-teacher-form .page-header .header-content {
+#page-my-profile .page-header .header-content {
     margin-bottom: 6.4rem;
 }
 
-#page-teacher-form main {
+#page-my-profile main {
     background: var(--color-box-base);
     width: 100%;
     max-width: 74rem;
@@ -17,16 +17,16 @@
     overflow: hidden;
 }
 
-#page-teacher-form main fieldset {
+#page-my-profile main fieldset {
     border: 0;
     padding: 0 2.4rem;
 }
 
-#page-teacher-form main fieldset + fieldset {
+#page-my-profile main fieldset + fieldset {
     margin-top: 6.4rem;
 }
 
-#page-teacher-form main fieldset legend {
+#page-my-profile main fieldset legend {
     font: 700 2.1rem Archivo;
     color: var(--color-text-title);
     margin-bottom: 2.4rem;
@@ -38,7 +38,7 @@
     border-bottom: 1px solid var(--color-line-in-white);
 }
 
-#page-teacher-form main fieldset legend button {
+#page-my-profile main fieldset legend button {
     background: none;
     border: 0;
     color: var(--color-primary);
@@ -47,27 +47,27 @@
     transition: color 0.2s;
 }
 
-#page-teacher-form main fieldset legend button:hover {
+#page-my-profile main fieldset legend button:hover {
     color: var(--color-primary-dark)
 }
 
-#page-teacher-form main fieldset .input-block + .textarea-block,
-#page-teacher-form main fieldset .select-block + .input-block {
+#page-my-profile main fieldset .input-block + .textarea-block,
+#page-my-profile main fieldset .select-block + .input-block {
     margin-top: 2.4rem;
 }
 
-#page-teacher-form main{
+#page-my-profile main{
     color: var(--color-text-complement);
 }
 
-#page-teacher-form main footer {
+#page-my-profile main footer {
     padding: 4rem 2.4rem;
     background: var(--color-box-footer);
     border-top: 1px solid var(--color-line-in-white);
     margin-top: 6.4rem;
 }
 
-#page-teacher-form main footer p {
+#page-my-profile main footer p {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -76,11 +76,11 @@
     color: var(--color-text-complement);
 }
 
-#page-teacher-form main footer p img {
+#page-my-profile main footer p img {
     margin-right: 2rem;
 }
 
-#page-teacher-form main footer .button {
+#page-my-profile main footer .button {
     width: 100%;
     height: 5.6rem;
     background: var(--color-secondary);
@@ -97,54 +97,54 @@
     margin-top: 3.2rem;
 }
 
-#page-teacher-form main footer .button:hover {
+#page-my-profile main footer .button:hover {
     background: var(--color-secondary-dark);
 }
 
 @media(min-width: 700px) {
-    #page-teacher-form{
+    #page-my-profile{
         max-width: 100vw;
     }
 
-    #page-teacher-form .page-header .header-content {
+    #page-my-profile .page-header .header-content {
         margin-bottom: 0;
     }
 
-    #page-teacher-form main fieldset {
+    #page-my-profile main fieldset {
         padding: 0 6.4rem;
     }
 
-    #page-teacher-form main .schedule-item {
+    #page-my-profile main .schedule-item {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr;
         column-gap: 1.6rem;
     }
 
-    #page-teacher-form main .schedule-item .input-block {
+    #page-my-profile main .schedule-item .input-block {
         margin-top: 0 !important;
     }
     
-    #page-teacher-form main footer {
+    #page-my-profile main footer {
         padding: 4.0rem 6.4rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
 
-    #page-teacher-form main footer p {
+    #page-my-profile main footer p {
         justify-content: space-between;
     }
     
-    #page-teacher-form main footer .button {
+    #page-my-profile main footer .button {
         width: 20rem;
         margin-top: 0;
     }
 
-    #page-teacher-form main fieldset legend {
+    #page-my-profile main fieldset legend {
         font: 700 2.4rem Archivo;
     }
 
-    #page-teacher-form main fieldset legend button {
+    #page-my-profile main fieldset legend button {
         font: 700 1.6rem Archivo;    
     }
 }
