--- a/src/pages/MyProfile/style.css
+++ b/src/pages/MyProfile/style.css
@@ -3,8 +3,33 @@
     height: 100vh;
 }
 
+
+#page-my-profile .avatar-content img{
+    width: 12rem;
+    height: 12rem;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+}
+
+#page-my-profile .page-header {
+    background-image: url("../../assets/images/profile-background.svg");
+    background-size: 150%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 #page-my-profile .page-header .header-content {
     margin-bottom: 6.4rem;
+    align-items: center;
+    text-align: center;
+}
+
+#page-my-profile .page-header .header-content .header-children .header-title {
+    margin-left: 2.5rem;
+}
+
+#page-my-profile .page-header .header-content .header-children .header-title p {
+    margin-top: 1rem;
 }
 
 #page-my-profile main {
@@ -38,6 +63,14 @@
     border-bottom: 1px solid var(--color-line-in-white);
 }
 
+#page-my-profile .name-container {
+    margin-bottom: 2rem;
+}
+
+#page-my-profile .contact-container {
+    margin-bottom: 2rem;
+}
+
 #page-my-profile main fieldset legend button {
     background: none;
     border: 0;
@@ -51,7 +84,6 @@
     color: var(--color-primary-dark)
 }
 
-#page-my-profile main fieldset .input-block + .textarea-block,
 #page-my-profile main fieldset .select-block + .input-block {
     margin-top: 2.4rem;
 }
@@ -106,12 +138,47 @@
         max-width: 100vw;
     }
 
+    #page-my-profile .page-header {
+        background-size: 70%;
+        height: 70%;
+    }
+
     #page-my-profile .page-header .header-content {
         margin-bottom: 0;
     }
 
+    #page-my-profile .page-header .header-content .header-children .header-title {
+        margin-left: 0;
+    }
+
+    #page-my-profile .page-header .header-content .header-children .header-title p {
+        margin-top: 0;
+    }
+
     #page-my-profile main fieldset {
         padding: 0 6.4rem;
+    }
+
+    #page-my-profile main fieldset .input-block + .input-block {
+        margin-top: 0;
+    }
+
+    #page-my-profile .name-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #page-my-profile .name-container .input-block:first-child {
+        margin-right: 2rem;
+    }
+    
+    #page-my-profile .contact-container {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    #page-my-profile .contact-container .input-block:first-child {
+        margin-right: 2rem;
     }
 
     #page-my-profile main .schedule-item {
