--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2.2rem 0;
+    margin-bottom: 4rem;
 }
 
 .avatar-container {
@@ -28,28 +28,21 @@
     width: 6rem;
     height: 6rem;
     border-radius: 50%;
-    margin-right: 1rem;
-}
-
-.landing-body {
-    display: row;
-    margin-bottom: 4rem;
-    color: var(--color-text-in-primary);
+    margin-right: 2rem;
 }
 
 .logo-container img {
-    height: 10rem; 
+    height: 10rem;
+    
 }
-
 .hero-image{
     width: 100%;
 }
-
 .logo-container{
     text-align: center;
     margin-bottom: 3.2rem;
+    
 }
-
 .logo-container h2 {
     font-weight: 500;
     font-size: 2.4rem;
@@ -57,15 +50,11 @@
     margin: 0.8rem;
 }
 
-#landing-footer {
-    display: row;
-    /* background-color: var(--color-background); */
-    margin: 0 auto;
-}
-
 .welcome-container {
-    margin-bottom: 2rem;
-    text-align: center;
+    margin: 3rem auto;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
 }
 
 .total-connections{
@@ -74,13 +63,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 1.1rem;
 }
 
 .total-connections img {
     margin-left: 0.8rem;
-}
-
-.total-connections {
     margin-bottom: 2rem;
 }
 
@@ -89,12 +76,11 @@
     justify-content: center;
     margin: 3.2rem 0;    
 }
-
 .buttons-container a {
-    width: 16rem;
-    height: 9rem;
+    width: 30rem;
+    height: 10.4rem;
     border-radius: 0.8rem;
-    font: 700 1.8rem Archivo;
+    font: 700 2.0rem Archivo;
 
     display: flex;
     align-items: center;
@@ -105,46 +91,42 @@
 
     transition: background-color 0.2s;
 }
-
 .buttons-container a:first-child {
     margin-right: 1.6rem;
 }
-
 .buttons-container a img {
     width: 4rem;
     margin-right: 1rem;
 }
-
 .buttons-container a.study {
     background: var(--color-primary-lighter);
 }
-
 .buttons-container a.give-classes {
     background: var(--color-secondary);
 }
-
 .buttons-container a.study:hover {
     background: var(--color-primary-light);
 }
-
 .buttons-container a.give-classes:hover {
     background: var(--color-secondary-dark);
 }
 
+
 @media(min-width: 1100px){
-    #page-landing{
-       height: 25em;
-       color: var(--color-text-base);
-      
-    }
 
     #page-landing-content{
         max-width: 1100px;
         
+        display: row;
+        align-items: center;
+        justify-content: center;
     }
 
     .landing-header {
-        padding-top: 9rem;
+        margin-top: 0.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 
     .landing-body {
@@ -153,10 +135,17 @@
         justify-content: space-between;
     }
 
+    .landing-footer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+    }
+
     .logo-container{
         align-self: center;
         text-align: left;
-        margin-right: 7rem;
+        margin-right: 8rem; 
     }
 
     .logo-container h2{
@@ -169,43 +158,28 @@
         
     }
 
-    .hero-image{
-        justify-self: end;
-        
-    }
-    
-    #landing-footer {
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .welcome-container {
-        margin-bottom: 0;
-        text-align: start;
-    }
-
-
     .total-connections{
         justify-self: end;
         font-size: 1.3rem;
-        
+        margin-left: 3.5rem;
     }
 
-    .buttons-container{       
-        justify-content: flex-start;
+    .welcome-container {
+        justify-content: space-between;
+               
+    }
+
+    .total-connections img {
+        margin-bottom: 2rem;
+        margin-right: 5.2rem;
         
     }
 
     .buttons-container a {
         font-size: 2.4rem;
-        width: 30rem;
-        height: 10.4rem;
     }
-        
+
     .buttons-container a img {
         margin-right: 2.4rem;
     }
-    
 }
